--- a/.gitignore
+++ b/.gitignore
@@ -174,6 +174,7 @@ ipython_config.py
 # Remove previous ipynb_checkpoints
 #   git rm -r .ipynb_checkpoints/
 
-# data
+# User data
 data/
 notebooks/
+logs/
